# EmbeddedDataFormat

./: .gitignore  10.12.2025_11-48-57.bdf  10.12.2025_11-48-57.tdf  31.10.2025_11-00-10.bdf  31.10.2025_11-00-10.tdf  31.10.2025_11-01-03.bdf  CMakeLists.txt  LICENSE  README.md  cedf.sln
doc/: 2025_08_01 edf.docx  NppEdf01.xml  Регистрация идентификаторов файла.md  Типовая Разметка.md
src/Test/: 1.E  1D.D  1E.E  CTest.vcxproj  Test.c  Test.vcxproj  Test.vcxproj.filters  c_testbig.tdf  dynChart.xlsx  echoChart.xlsx  echorawChart.xlsx  norm_8_raw.txt
src/UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
src/common/: BlockWriter.c  BlockWriter.h  Charts.h  DfHeader.c  DfHeader.h  EdfHeader.c  EdfHeader.h  EdfStream.h  EdfUtils.c  EdfWriter.c  EdfWriter.h  IStream.h  KeyValue.c  KeyValue.h  MemStream.c  PoType.c  PoType.h  Primitives.c  Primitives.h  TypeInfo.c  TypeInfo.h  _pch.h  edf.h
src/converter/: .editorconfig  ConverterDat.c  ConverterDyn.c  ConverterEcho.c  ConverterEcho_raw_txt.c  ConverterEdf.c  EdfImpl.c  FileStreamImpl.c  MbCrc.c  SiamFileFormat.h  cedf.sln  cedf.vcxproj  cedf.vcxproj.filters  converter.c  converter.h  edf.h  edf_cfg.h  main.c
srcNet/EdfNet/src/: BinReader.cs
srcNet/EdfNetTest/: TestStructSerialize.cs
srcNet/NetTest/: Assert.cs  NetTest.csproj  Program.cs  Test1.cs
srcNet/NetTest/Properties/PublishProfiles/: FolderProfile.pubxml
